crates/squawk_syntax/src/snapshots/squawk_syntax__test__table_and_columns_list_repack_validation.snap
---
source: crates/squawk_syntax/src/test.rs
input_file: crates/squawk_syntax/test_data/validation/table_and_columns_list_repack.sql
---
SOURCE_FILE@0..10
  REPACK@0..9
    REPACK_KW@0..6 "repack"
    WHITESPACE@6..7 " "
    TABLE_AND_COLUMNS_LIST@7..9
      TABLE_AND_COLUMNS@7..8
        TABLE_RELATION_NAME@7..8
          TABLE_NAME_REF@7..8
            PATH_REF@7..8
              PATH_SEGMENT_REF@7..8
                IDENT@7..8 "t"
      COMMA@8..9 ","
  WHITESPACE@9..10 "\n"

error[syntax-error]: expected table name after comma
  ╭▸ 
1 │ repack t,
  ╰╴         ━
